--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "A mark calculator app's backend",
   "main": "server.js",
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "TheLoneMoonRat",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mssql": "^10.0.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.9.1"
+    "mssql": "^10.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
